--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
 			<artifactId>fastjson</artifactId>
 			<version>1.2.70</version>
 		</dependency>
+
+<!--@ConfigurationProperties  添加这个注解是 需要导入该依赖-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
