--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,11 @@
-server:
-    port: 8080 # 设置服务端口
-    servlet:
-        contextPath: /demo  # 服务的路径  不写默认
+# 开发环境配置    新建 application-dev   测试   、application-pro  生产  
+# 注意 中间 使用  中横线  -  连接
+spring:
+  profiles:
+    active:
+    - dev
 
 
-logging:
-  config: logback.xml # 日志的相关配置信息，都放在 `logback.xml` 文件中了
-  level:
-    com.maven.springboot.demo.control: trace # 指定具体的 mapper 中日志的输出级别，
-    #上面的配置表示 `com.itcodai.course03.dao` 包下的所有 mapper 
-    #日志输出级别为 trace，会将操作数据库的 sql 打印出来，开发时设置成 trace 方便定位问题，在生产环境上，将这个日志级别再设置成 error 级别即可
         
    
 
