--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -13,5 +13,10 @@
     "name": "url.orderUrl1",
     "type": "java.lang.String",
     "description": "A description for 'url.orderUrl1'"
+  },
+  {
+    "name": "swagger.enable",
+    "type": "java.lang.String",
+    "description": "A description for 'swagger.enable'"
   }
 ]}
