--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,13 @@
 		</dependency>
 
 
+		<!--使用AOP 依赖-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
