--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -18,5 +18,10 @@
     "name": "swagger.enable",
     "type": "java.lang.String",
     "description": "A description for 'swagger.enable'"
+  },
+  {
+    "name": "datasource.url",
+    "type": "java.lang.String",
+    "description": "A description for 'datasource.url'"
   }
 ]}
