--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,5 +1,5 @@
 server:
-    port: 8080 # 设置服务端口
+    port: 8081 # 设置服务端口
     servlet:
         contextPath: /demo  # 服务的路径  不写默认
 
@@ -19,3 +19,29 @@ url:
 
 swagger:
   enable: true
+
+
+
+# 数据库地址
+datasource:
+  url: localhost:3306/menagerie
+
+# mysql 数据库连接配置
+spring:
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://${datasource.url}?useSSL=false&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true&autoReconnect=true&failOverReadOnly=false&maxReconnects=10&serverTimezone=UTC
+    username: root
+    password: 123456
+    hikari: #springboot  自带连接池
+      maximum-pool-size: 10  # 最大连接池数
+      max-lifetime: 1770000
+
+
+#
+mybatis:
+  type-aliases-package: com.maven.springboot.demo.entity
+  configuration:
+    map-underscore-to-camel-case: true # 驼峰命名规范
+  mapper-locations: # mapper映射文件位置
+    - classpath:mapper/*.xml
